feat: gfc updated

--- a/pages/homepage/main.profile.html
+++ b/pages/homepage/main.profile.html
@@ -179,13 +179,13 @@
             <hr>
 
             <!-- rooms -->
-            <!-- <div class="settings">
+            <div class="settings">
 
                 <div class="account-manage">
                     <div class="account">
                         <h1>
-                            <a href="../../pages/homepage/user_orders.html">
-                                <i class="fa-solid fa-bag-shopping"></i> &NonBreakingSpace; Rooms
+                            <a href="../../pages/homepage/user_hotels.html">
+                                <i class="fa-solid fa-hotel"></i></i> &NonBreakingSpace; Claimed Rooms
                             </a>
                         </h1>
                     </div>
@@ -202,7 +202,7 @@
                 </span>
             </div>
             <!-- rooms completed -->
-            <!-- <hr>             --> 
+             <hr>             
         </div>
 
         <script src="../../js/header.js"></script>
