--- a/pages/homepage/user_orders.html
+++ b/pages/homepage/user_orders.html
@@ -150,7 +150,7 @@ console.log(allProductIds)
 
 const findOrdersDetails = allProductIds.filter(data  =>
 gettingArrayProductUser.some((p) => p.productIdFromTheUserBag === data.product_uuid))
-console.log(findOrdersDetails)
+console.log(findOrdersDetails);
 
 
 //let orderId = [];
