--- a/pages/homepage/user_tickets.html
+++ b/pages/homepage/user_tickets.html
@@ -170,7 +170,7 @@
     let eachTicket = ticketArray.filter((t) => t.userUnique === unique)
 
     if(eachTicket == 0){
-    const errorMessage  = ` <div class="error" style="text-align: center;">
+    const errorMessage  = ` <div class="error" style="text-align: center; font-family: 'open sans', sans serif ">
     <p>No tickets yet</p>
 </div>`
 
