--- a/pages/other pages/contact.html
+++ b/pages/other pages/contact.html
@@ -187,7 +187,7 @@
                         <img src="../../assets/images/location.png" width="1485" height="550" alt="loaction_of_global_fun_city">
                     </div>	
 
-                    <footer>
+                    <footer class="footer-for-gfc">
                         <div class="logo">
                             <img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo">
                         </div>
