--- a/pages/shop/checkout.html
+++ b/pages/shop/checkout.html
@@ -282,7 +282,7 @@ const deliveryStatus = "notdelivered";
 
 orderDataFromtheUser.push(orderData);
 localStorage.setItem("orderDataFromUser" , JSON.stringify(orderDataFromtheUser));
-console.log(orderDataFromtheUser);
+//console.log(orderDataFromtheUser);
 
 }
 
