--- a/index.html
+++ b/index.html
@@ -209,7 +209,7 @@
 "I had an amazing time at the Global Fun City park! The roller coasters were exhilarating, the food was delicious, and the staff was friendly and helpful. I would like to thank the Managing Director of Global Fun City. Totally, Brillant!"
                     </div>
                     <div class="profile">
-                        <img src="https://ca.slack-edge.com/T032648LE-UUH4J270U-g77bd888f56c-512" alt="">
+                        <img src="https://iili.io/HgV7Xe9.jpg" alt="photo-of-reviews">
                         <a href="#">Revathi Iyer</a>
 <!--                             <span>Founder & CEO</span> -->
                     </div>
@@ -222,7 +222,7 @@
                         "The water park section was especially enjoyable on a hot day. The only downside was the long lines, but the staff did their best to keep things moving quickly. Overall, it was a great experience!"
                      </div>
                     <div class="profile">
-                        <img src="https://ca.slack-edge.com/T032648LE-U02M6DXMG5N-64261edc50e8-512" alt="">
+                        <img src="https://ca.slack-edge.com/T032648LE-U02M6DXMG5N-64261edc50e8-512" alt="photo-of-reviews">
                         <a href="#">Surya Umapathy</a>
 <!--                             <span>Founder & CEO</span> -->
                     </div>
@@ -235,7 +235,7 @@
                         "I booked tickets for my family to the amusement park and it was such a great experience. The website was easy to navigate and we were able to find the perfect tickets for our needs. We're counting down the days until we can visit the park and make some unforgettable memories."
                     </div>
                     <div class="profile">
-                        <img src="https://ca.slack-edge.com/T032648LE-UNJ715CK0-53e3dc63a07b-512" alt="">
+                        <img src="https://ca.slack-edge.com/T032648LE-UNJ715CK0-53e3dc63a07b-512" alt="photo-of-reviews">
                         <a href="#">Shyam</a>
 <!--                             <span>Founder & CEO</span> -->
                     </div>
@@ -248,7 +248,7 @@
     "Just booked our tickets to the amusement park and we can't wait to go! The online booking process was quick and easy, and we got a great deal on our tickets. We're looking forward to a day full of thrills and excitement!"
                     </div>
                     <div class="profile">
-                        <img src="https://ca.slack-edge.com/T032648LE-U03P5LA64E7-1acf61ffb14d-512" alt="">
+                        <img src="https://ca.slack-edge.com/T032648LE-U03P5LA64E7-1acf61ffb14d-512" alt="photo-of-reviews">
                         <a href="#">Bharathwaj Soundararajan</a>
 <!--                             <span>Founder & CEO</span> -->
                     </div>
@@ -261,7 +261,7 @@
 "I'm so excited to be heading to the amusement park this weekend! I booked my tickets online and it was super simple. The park has so many amazing rides and attractions, I know it's going to be an unforgettable day."
                     </div>
                     <div class="profile">
-                        <img src="https://ca.slack-edge.com/T032648LE-U03S2G19E2Z-2925e58a5dd9-512" alt="">
+                        <img src="https://ca.slack-edge.com/T032648LE-U03S2G19E2Z-2925e58a5dd9-512" alt="photo-of-reviews">
                         <a href="#">Vinit Gore</a>
 <!--                             <span>Founder & CEO</span> -->
                     </div>
@@ -296,6 +296,7 @@
 </div>
 
 <footer class="footer_for_gfc">
+    <div class="total-div-for-footer">
 <div class="logo">
 <img src="./assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo">
 </div>
@@ -410,9 +411,12 @@
     <br>Site designed by Vignesh.in
 </p>
 </div>
+</div>
 </footer>
 
-            <script>function openNav() {
+
+<script>
+function openNav() {
 	  document.getElementById("mySidenav").style.width = "250px";
 }
 
