--- a/pages/homepage/user_order_detail.html
+++ b/pages/homepage/user_order_detail.html
@@ -164,12 +164,36 @@ Starting Product detail -->
 
 const productIdForUrl = new URLSearchParams(window.location.search).get("orderId");
 
-const proId = JSON.parse(localStorage.getItem("orderDataFromUser")); 
+const gettingOrderData = JSON.parse(localStorage.getItem("orderDataFromUser")); 
+console.log(gettingOrderData);
 
-const getOrderData = proId.find((data => data.orderId === productIdForUrl));
-console.log(getOrderData);
+const clothingDetails = JSON.parse(localStorage.getItem("clothing_details"));
+
+const accessoriesDetails = JSON.parse(localStorage.getItem("accessories_details"));
+
+const homeProducts = JSON.parse(localStorage.getItem("home_details"));
+
+const orderIdfromTheUser = JSON.parse(localStorage.getItem("usersfromCheckoutData"));
+
+const allProductIds = clothingDetails.concat(accessoriesDetails,homeProducts);
+console.log(allProductIds)
+
+// const findProductDetails = allProductIds.find((data) => data.product_uuid === gettingOrderData.productIdFromTheUserBag);
+
+const findOrdersDetails = allProductIds.filter(data  =>
+gettingOrderData.some((p) => p.productIdFromTheUserBag === data.product_uuid))
+console.log(findOrdersDetails);
+
+// const getOrderData = proId.find((data => data.orderId === productIdForUrl));
+// console.log(getOrderData);
+
+//const [firstOrderUser] = orderIdfromTheUser;
+
+//if(findProductDetails){
 
 //Creating DOM:
+
+orderIdfromTheUser.forEach((orderUser) => {
 
 // Create delivery address elements
 const deliveryAddressTotalDiv = document.createElement("div");
@@ -184,19 +208,18 @@ deliveryAddressHeader.innerText = "Delivery Address";
 
 const nameOfTheUser = document.createElement("h5");
 nameOfTheUser.classList.add("name-of-the-user");
-nameOfTheUser.innerText = "Hello";
+nameOfTheUser.innerText = orderUser.firstName;
 
 const deliveryAddressOfTheUser = document.createElement("p");
 deliveryAddressOfTheUser.classList.add("delivery-address-of-the-user");
-deliveryAddressOfTheUser.innerHTML = "2/47 Keela Krishnan Kovil St, Keelapudur road, Palakarai, Trichy-1. <br> Trichy, Tiruchirappalli - 620001, Tamil Nadu";
-
+deliveryAddressOfTheUser.innerHTML =  orderUser.doorNo + ", " + orderUser.streetAddress + ", " + orderUser.townCity + ", " + orderUser.state + ", " + orderUser.countryRegion + "." 
 const zipCode = document.createElement("p");
 zipCode.classList.add("zip-code");
-zipCode.innerText = "ZIP Code: 000001";
+zipCode.innerText = "ZIP Code: " + orderUser.zipCode;
 
 const phoneNumber = document.createElement("p");
 phoneNumber.classList.add("phone-number");
-phoneNumber.innerHTML = "Phone Number  &nbsp; 1234567890";
+phoneNumber.innerHTML = "Phone Number  &nbsp; " + orderUser.phone;
 
 deliveryAddressDiv.appendChild(deliveryAddressHeader);
 deliveryAddressDiv.appendChild(nameOfTheUser);
@@ -253,11 +276,11 @@ const productImageDiv = document.createElement('div');
 productImageDiv.classList.add('product-image');
 
 const productImage = document.createElement('img');
-productImage.src = 'https://iili.io/HX7ia1I.jpg';
+productImage.src = findOrdersDetails[0].product_photo;
 productImage.classList.add('product-chosen-by-user');
 productImage.width = '180';
 productImage.height = '180';
-productImage.alt = 'shirt';
+productImage.alt = findOrdersDetails[0].product_name;
 productImageDiv.appendChild(productImage);
 
 // Create the product name div element and add the product name, size, and price elements inside it
@@ -267,7 +290,7 @@ productNameDiv.classList.add('product-name');
 const productName = document.createElement('h4');
 productName.classList.add('name-of-the-product');
 
-productName.textContent = 'White T-Shirt With Logo';
+productName.textContent = findOrdersDetails[0].product_name;
 
 const productSize = document.createElement('h5');
 productSize.classList.add('size-of-the-product');
@@ -275,7 +298,7 @@ productSize.textContent = 'Size : M';
 
 const productPrice = document.createElement('h5');
 productPrice.classList.add('price-of-the-product');
-productPrice.textContent = 'Price : $100.00';
+productPrice.textContent = 'Price : $ ' + findOrdersDetails[0].product_price;
 
 productNameDiv.appendChild(productName);
 productNameDiv.appendChild(productSize);
@@ -291,7 +314,7 @@ quantityTotalPriceDiv.classList.add('quantity-total-price');
 
 const productQty = document.createElement('h5');
 productQty.classList.add('qty-of-the-product');
-productQty.textContent = 'Qty : ' + getOrderData.productQty;
+productQty.textContent = 'Qty : ' + gettingOrderData[0].productQty;
 
 const totalProductPrice = document.createElement('h5');
 totalProductPrice.classList.add('total-price-of-the-product');
@@ -299,7 +322,7 @@ totalProductPrice.textContent = 'Total Price : $100.00';
 
 const orderDate = document.createElement('h5');
 orderDate.classList.add('order-date');
-orderDate.textContent = 'Order Date : ' + getOrderData.nowDate;
+orderDate.textContent = 'Order Date : ' + gettingOrderData[0].nowDate;
 
 quantityTotalPriceDiv.appendChild(productQty);
 quantityTotalPriceDiv.appendChild(totalProductPrice);
@@ -311,11 +334,11 @@ orderIdNeedHelpDiv.classList.add('order-id-needhelp');
 
 const shippingDetails = document.createElement('h5');
 shippingDetails.classList.add('shipping-details-of-the-product');
-shippingDetails.textContent = 'Delivery Status : ' + getOrderData.deliveryStatus;
+shippingDetails.textContent = 'Delivery Status : ' + gettingOrderData[0].deliveryStatus;
 
 const orderId = document.createElement('h5');
 orderId.classList.add('order-id');
-orderId.textContent = 'Order ID : ' + getOrderData.orderId;
+orderId.textContent = 'Order ID : ' + gettingOrderData[0].orderId;
 
 const needHelp = document.createElement('h5');
 needHelp.classList.add('need-help');
@@ -348,7 +371,7 @@ deliveryAddressTotalDiv.appendChild(moreActionsDiv)
 
 document.querySelector(".background-color-for-detail").append(deliveryAddressTotalDiv, br1, br2 , br3, outerDiv);
 
-
+})
 
 
 
