feat: gfc updated

--- a/index.html
+++ b/index.html
@@ -286,8 +286,10 @@
 
 <div class="customer">
 <h2>Our Partner</h2>
-
+<div class="photo-of-partner" style="display: flex; justify-content: center;">
 <a href="https://deploy-preview-1--sr-catering.netlify.app/"> <img src="./assets/images/main-logo.png" class="srcatering" width="200px" alt="sr-catering-logo"> </a>
+<a href="https://deploy-preview-1--only-home-food.netlify.app"> <img src="./assets/images/only-home-food.png" class="srcatering" width="200px" alt="sr-catering-logo"> </a>
+</div>
 </div>
 
 
