--- a/pages/book now/final-book-now.html
+++ b/pages/book now/final-book-now.html
@@ -81,8 +81,9 @@
                                 <h1>Hurrah! &#127881;</h1>
                                 <h2>Your Ticket is booked.</h2>
                                 <h2>Enjoy the Vibe in Global Fun City.</h2>
-                                <a href="../../index.html">
-                                    <button> <-Back to Home</button>
+                                <h2>Your e-ticket has been sent to email id</h2>
+                                <a href="../../pages/homepage/main.profile.html">
+                                    <button> <i class="fa-solid fa-arrow-left"></i> Check Your Tickets</button>
                                 </a>
                             </div>
 
