--- a/pages/footer other pages/csrinitiatives.html
+++ b/pages/footer other pages/csrinitiatives.html
@@ -20,7 +20,7 @@
     </head>
     <body>
 
-        <div class="visit-signin">
+        <!-- <div class="visit-signin">
 
             <div class="visit-global">
                 <p>	Visit global1.com</p>
@@ -35,7 +35,7 @@
                 </p>
             </div>
 		
-        </div>
+        </div> -->
 
         <div class="header">
             <div id="mySidenav" class="sidenav">
@@ -291,5 +291,6 @@
                 </p>
             </div>
         </footer>
+        <script src="../../js/header.js"></script>
     </body>
 </html>
