--- a/pages/footer other pages/rulesandregulations.html
+++ b/pages/footer other pages/rulesandregulations.html
@@ -20,14 +20,12 @@
     </head>
     <body>
 
-        <div class="visit-signin">
-
+        <!-- <div class="visit-signin">
             <div class="visit-global">
                 <p>	Visit global1.com</p>
             </div>	
 		
             <div class="sign-in">
-			
                 <p>
                     <a href="../../pages/signup for booking/signup.html"> Sign In </a>
                     | <a href="../signup for booking/create-an-account.html"> Create Account</a>
@@ -35,7 +33,7 @@
                 </p>
             </div>
 		
-        </div>
+        </div> -->
 
         <div class="header">
             <div id="mySidenav" class="sidenav">
@@ -289,6 +287,6 @@
                 </p>
             </div>
         </footer>
-
+        <script src="../../js/header.js"></script>
     </body>
 </html>
