--- a/pages/homepage/profile.html
+++ b/pages/homepage/profile.html
@@ -25,7 +25,7 @@
 
 
         <div class="header">
-            <a href="../../pages/homepage/index-profile.html">
+            <a href="../../index.html">
                 <img src="../../assets/images/globalfuncitylogo.png" class="header-logo" width="200px" alt="logo">
             </a>
             <nav class="navbar">
@@ -126,7 +126,7 @@
                         <label class="input-field">Password</label>
                         <br>
                         <input id="password" class="input-field" type="password" pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[!@#$%^&amp;*_=+-]).{8,24}$" maxlength="10" minlength="8" 
-                            title="Please give one uppercase, one lowercase, one special character and one number miniumum is 8 character maximum is 10 characters" readonly>
+                            title="Please give one uppercase, one lowercase, one special character and one number miniumum is 8 character maximum is 10 characters" disabled>
                     </form>
                 </div>
 
