--- a/pages/homepage/user_tickets.html
+++ b/pages/homepage/user_tickets.html
@@ -302,7 +302,7 @@ priceTitle.textContent = 'Total Price';
 
 const priceDetail = document.createElement('p');
 priceDetail.classList.add('detail-from-user-to-buy');
-priceDetail.textContent = userDatafromtheReservationDetails["totalPriceFromtheUserInBooking"];
+priceDetail.textContent = "$" + userDatafromtheReservationDetails["totalPriceFromtheUserInBooking"];
 
 ticketDetail2.appendChild(adultTitle);
 ticketDetail2.appendChild(adultDetail);
