--- a/pages/shop/proceedcheckout.html
+++ b/pages/shop/proceedcheckout.html
@@ -256,8 +256,8 @@ cancelOrderButton.innerText = 'Cancel Order';
 
 cancelOrderLink.appendChild(cancelOrderButton);
 
-statusSection.appendChild(statusHeading);
-statusSection.appendChild(statusParagraph);
+//statusSection.appendChild(statusHeading);
+//statusSection.appendChild(statusParagraph);
 statusSection.appendChild(checkOrdersLink);
 statusSection.appendChild(cancelOrderLink);
 
