--- a/pages/shop/shop.html
+++ b/pages/shop/shop.html
@@ -391,7 +391,8 @@
         </div>
         <!-- faq completed -->
 
-        <footer>
+        <footer class="footer_for_shopglobal">
+            <div class="total_div_for_footer">
             <div class="logo">
                 <img src="../../assets/images/globalfuncitylogo.png" class="footer-logo" alt="logo">
             </div>
@@ -504,6 +505,7 @@
                 <p>Global Fun City &#169; 2022. All rights Reserved.
                     <br>Site designed by Vignesh.in
                 </p>
+            </div>
             </div>
         </footer>
 
