--- a/pages/other pages/ticketprices.html
+++ b/pages/other pages/ticketprices.html
@@ -131,7 +131,7 @@
                             Ticket
                         </h3>
                         <h2>
-                            $<span class="price-colour">65</span>/person(90-130cm Height)
+                            $<span class="price-colour">65</span>/person(5-17 years)
                         </h2>
                         <p>This ticket grants access to waterpark attractions, including waterslides, pools.</p>
                         <button class="btn-ticket-book-now" id="btn-booknow-children">
