--- a/pages/shop/clothing.html
+++ b/pages/shop/clothing.html
@@ -6,6 +6,7 @@
         <link rel="icon" type="image/x-icon" href="../../assets/images/favicon.png">
         <title> Shop - Clothing - Global Fun City</title>
         <link rel="stylesheet" href="../../assets/store css/clothing.css">
+        <link rel="stylesheet" href="../../assets/homepage_css/footer_shopglobal.css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -128,6 +129,10 @@
             </div>
         </div>
 
+        <footer class="footer_for_shopglobal">
+
+        </footer>
+
         <script>
 	const clothing_details = JSON.parse(localStorage.getItem("clothing_details"));
 	//console.log(clothing_details);
@@ -165,5 +170,6 @@
         <script src="../../js/shop.js"></script>
         <script src="../../js/shop_alert_and_allow.js"></script>
         <script src="../../js/mybag_numbers.js"></script>
+<script src="../../js/footer_shopglobal.js"></script>
     </body>
 </html>
